fixed #3, fixed #2; took entirely too long because I'm super smart lol

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,9 +1,24 @@
+.headerImg {
+    /*background-image: url(public/westieWorld.png);*/
+    height: 100%
+    width: auto;
+}
+
 .header {
 	background: hsl(206, 93%, 73%);
 	display: flex;
     align-items: center;
     height: 400px;
     justify-content: space-around;
+/*
+    background-image: url(public/westieWorld.png);
+    background-repeat: no-repeat;
+    background-size: 50%;
+    border: 1px solid red;
+    display: flex;
+    height: 100%;
+    width: auto;
+    justify-content: space-around;*/
 }
 
 body {
